fixes menu styling glitch on mobile

--- a/src/styles/css/app.css
+++ b/src/styles/css/app.css
@@ -700,7 +700,6 @@ body {
 
 .overlay-gradient {
   position: absolute;
-  z-index: 1;
   top: 30%;
   width: 100%;
   height: 70%;
@@ -713,7 +712,6 @@ body {
   bottom: 30vh;
   text-align: center;
   color: #fff;
-  z-index: 2;
   width: 100%; }
   .title-section h1 {
     margin: 0;
