--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -47,7 +47,6 @@ body {
 }
 .overlay-gradient {
 	position: absolute;
-    z-index: 1;
     top: 30%;
     width: 100%;
     height: 70%;
@@ -60,7 +59,6 @@ body {
 	bottom: 30vh;
 	text-align: center;
 	color: #fff;
-	z-index: 2;
 	width: 100%;
 	h1 {
 		margin: 0;
